[package]
name = "recchroot"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Enter chroot with proper bind mounts (like arch-chroot)"
license = "MIT"
repository = "https://github.com/LevitateOS/recchroot"
homepage = "https://github.com/LevitateOS/recchroot"
readme = "README.md"
keywords = ["chroot", "linux", "mount", "arch-chroot", "system"]
categories = ["command-line-utilities", "filesystem"]
authors = ["LevitateOS Contributors"]
exclude = [
    ".github/*",
    "CLAUDE.md",
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.29", features = ["mount", "signal"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
